# JavaSmartGrader

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  java_grader_test_cases.json  main.py  package-lock.json  promptfooconfig.yaml  pyproject.toml  ruff.toml
.github/workflows/: editorconfig.yml
backend/: .env.example  Dockerfile  README.md  TryingAzure3.2wordByWord+feature.py  api.py  main.py  pyproject.toml  settings.py
backend/OCR/: .gitignore  README.md  logs.py  main.py  requirements.txt
backend/OCR/ocr_corrector/: README.md  SETTINGS_GUIDE.py  __init__.py  __main__.py  config.py  helpers.py  jobs.py  llm_corrector.py  logs.py  models.py  ocr_engine.py  ocr_worker.py  pipeline.py  prompts.py  schemas.py  tasks.py  test_jobs.py  tests.py
backend/ai_grader/: README.md  __init__.py  config.py  llm_client.py  main.py  parser_validator.py  prompt_builder.py  schemas.py  self_test.py  test.py
backend/ai_grader/adapters/: __init__.py  database_adapter.py  queue_adapter.py
backend/ai_grader/dataset/: README.md  dataset_card_v4.docx  train_set.jsonl  train_set_nodup.jsonl  val_set.jsonl  val_set_nodup.jsonl
backend/api/: README.md  auth.py  dependencies.py  s3.py  test.py  test_job.py  test_new.py
backend/api/routes/: assignments.py  confidence_flags.py  courses.py  generate_report.py  grading.py  helpers.py  questions.py  submissions.py  test_confidence_flags.py  users.py
backend/core/: config.py  job_queue.py  test.py  test_job.py
backend/core/process/: __init__.py  final_result.py  grader.py  ocr.py  sandbox.py
backend/db/: README.md  session.py  settings.py  test.py
backend/db/alembic/: README.md  env.py
backend/db/alembic/versions/: 05bb301a1930_fixing_foreign_keys.py  2bf3f38b207f_initial_db.py  328eb2ce63c1_enforcing_rubric.py  436604a515bd_adding_due_dates_to_assignments.py  447721779876_inserting_title_question_and_.py  484284b2c0ac_finalized_schema.py  5799e3b8096d_adding_emails_to_users.py  7a2d9a3c11be_add_cascades_for_submission_children.py  a3f8e1c2d4b6_add_cascades_for_remaining_fks.py  a59d68f2afa9_renaming_feedback_text_to_transcribed_.py  b1d4c7e9a2f0_fix_questions_id_sequence.py  d6b4ed6615e1_added_runtime_errors_to_compile_results.py  f6da871e544a_testcases_per_assignment_not_submission.py
backend/db/crud/: __init__.py  assignments.py  confidence_flags.py  courses.py  generate_report.py  grading.py  questions.py  submissions.py  users.py
backend/db/models/: __init__.py  main_db.py
backend/sandbox/: Dockerfile.compiler  Dockerfile.executer  Dockerfile.runner  README.md  TODO.md  helpers.py  jobs.py  sandbox.py  sandbox_worker.py  schemas.py  test.py  test_jobs.py  test_new.py
backend/sandbox/docker/: Dockerfile.executer
backend/sandbox/scripts/: compile.sh  execute.sh  run.sh
backend/schemas/: __init__.py  assignments.py  confidence_flags.py  courses.py  generate_reports.py  grading.py  jobs.py  questions.py  rubric.py  shared.py  submissions.py  users.py
backend/scripts/: docker-db-init.sh  start-services.sh  stop-services.sh
backend/tests/: run_e2e_pipeline.py  test_cascade.py  test_e2e_new.py  test_submission.py
dataset/LLM/Test/: .gitignore  README.md  package.json  promptfooconfig.yaml
dataset/LLM/graded-exams/: placeholder.md
dataset/LLM/ungraded-exams/: placeholder.md
dataset/OCR/java-text/: placeholder.md  validation_results.csv
dataset/OCR/plain-text/: placeholder.md
experiments/: placeholder.md
experiments/docker-basics/: Dockerfile  app.py  test.sh
experiments/docker-basics/app/: app.py  app.sh
experiments/redis-basics/: asyncio_learn.py  pyproject.toml  redis_learn.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: InstructorNavButton.jsx  ProtectedRoute.jsx  RubricEditor.jsx
model/: placeholder.md
prototype/: .env.example  app.py  db.py  prototype.db
prototype/services/: __init__.py  grader_adapter.py  ocr_adapter.py  sandbox_adapter.py
prototype/static/: styles.css
prototype/templates/: assignment_detail.html  base.html  create_assignment.html  instructor_dashboard.html  student_dashboard.html  submission_detail.html  submit.html
provider_configs/: providers.yaml
results/: grader_eval_{{timestamp}}.json  grader_evaluation2.json
system_prompt/: rubric_prompt.json  sys_prompt.json
test_cases/: java_case_1.json  java_case_10.json  java_case_2.json  java_case_6.expected.json
(+34 files in other folders)
