[project]
name = "backend"
version = "0.1.0"
description = "This is the full dependencies list for the backend subdirectory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "azure-ai-formrecognizer>=3.3.3",
    "bcrypt>=5.0.0",
    "boto3>=1.42.81",
    "botocore[crt]>=1.42.81",
    "docker>=7.1.0",
    "fastapi>=0.133.1",
    "google-genai>=1.63.0",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.1",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.0",
    "taskipy>=1.14.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py", "test.py"]
addopts = ["--import-mode=importlib"]
markers = [
    "e2e: exercises a live HTTP API (start backend and dependencies first)",
]

[tool.taskipy.tasks]
lint = "cd .. && black . && ruff check --fix ."
base = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload --log-level error"
local = "env APP_ENV=local env LOG_LEVEL=DEBUG uv run task base"
dev = "env APP_ENV=dev env LOG_LEVEL=DEBUG uv run task base"
ocr = "env APP_ENV=dev LOG_LEVEL=DEBUG uv run python -m ocr.main"
sandbox = "env APP_ENV=dev LOG_LEVEL=DEBUG uv run python -m sandbox.sandbox_worker"
grader = "env APP_ENV=dev LOG_LEVEL=DEBUG uv run python -m ai_grader.main"
ocr_prod = "env APP_ENV=prod LOG_LEVEL=DEBUG uv run python -m ocr.main"
sandbox_prod = "env APP_ENV=prod LOG_LEVEL=DEBUG uv run python -m sandbox.sandbox_worker"
grader_prod = "env APP_ENV=prod LOG_LEVEL=DEBUG uv run python -m ai_grader.main"
prod = "env APP_ENV=prod env LOG_LEVEL=INFO uv run task base"
